force-app/main/default/objects/FIN_Financial_Code__c/FIN_Financial_Code__c.object-meta.xml
<CustomObject>
    <label>Financial Code</label>
    <nameField>
        <label>Financial Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>