force-app/main/default/objects/FIN_Financial_Code__c/fields/FIN_AccountType__c.field-meta.xml
<CustomField>
    <fullName>FIN_AccountType__c</fullName>
    <formula>TEXT(FIN_Financial_Chart_of_Accounts__r.FIN_Account_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>