force-app/main/default/objects/FIN_Financial_Code__c/fields/FIN_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>FIN_Business_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Unit</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Region__c</field>
            <operation>equals</operation>
            <valueField>FIN_BusinessUnit__c.Region__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FIN_BusinessUnit__c</referenceTo>
    <relationshipName>Financial_Codes1</relationshipName>
    <type>Lookup</type>
</CustomField>