force-app/main/default/objects/FIN_Financial_Code__c/fields/FIN_Business_Unit_Description__c.field-meta.xml
<CustomField>
    <fullName>FIN_Business_Unit_Description__c</fullName>
    <formula>FIN_Business_Unit__r.FIN_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Unit Description</label>
    <type>Text</type>
</CustomField>