force-app/main/default/objects/FIN_Financial_Code__c/fields/FIN_Chart_of_Accounts_Description__c.field-meta.xml
<CustomField>
    <fullName>FIN_Chart_of_Accounts_Description__c</fullName>
    <formula>FIN_Financial_Chart_of_Accounts__r.FIN_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chart of Accounts Description</label>
    <type>Text</type>
</CustomField>