force-app/main/default/objects/FIN_Financial_Code__c/fields/FIN_Company_Code__c.field-meta.xml
<CustomField>
    <fullName>FIN_Company_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Code</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Region__c</field>
            <operation>equals</operation>
            <valueField>FIN_CompanyCode__c.Region__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FIN_CompanyCode__c</referenceTo>
    <relationshipLabel>Financial Codes</relationshipLabel>
    <relationshipName>Financial_Codes_CompanyCode</relationshipName>
    <type>Lookup</type>
</CustomField>