force-app/main/default/objects/FIN_Financial_Code__c/fields/FIN_Contract__c.field-meta.xml
<CustomField>
    <fullName>FIN_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Financial Codes</relationshipLabel>
    <relationshipName>Financial_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>