force-app/main/default/objects/FIN_Financial_Code__c/fields/FIN_Stat_Chart_of_Accounts__c.field-meta.xml
<CustomField>
    <fullName>FIN_Stat_Chart_of_Accounts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Statistical Chart of Accounts</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Region__c</field>
            <operation>equals</operation>
            <valueField>FIN_ChartOfAccounts__c.Region__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FIN_ChartOfAccounts__c</referenceTo>
    <relationshipName>Financial_Codes3</relationshipName>
    <type>Lookup</type>
</CustomField>