force-app/main/default/objects/FIN_Financial_Code__c/fields/FIN_Statistical_Chart_of_Acct_Desc__c.field-meta.xml
<CustomField>
    <fullName>FIN_Statistical_Chart_of_Acct_Desc__c</fullName>
    <formula>FIN_Stat_Chart_of_Accounts__r.FIN_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Statistical Chart of Acct Desc.</label>
    <type>Text</type>
</CustomField>