force-app/main/default/objects/FIN_Financial_Code__c/fields/FIN_Subledger_Code_Description__c.field-meta.xml
<CustomField>
    <fullName>FIN_Subledger_Code_Description__c</fullName>
    <formula>FIN_Subledger_Code__r.FIN_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subledger Code Description</label>
    <type>Text</type>
</CustomField>