force-app/main/default/objects/FIN_Financial_Code__c/fields/FIN_SubledgerCodeName__c.field-meta.xml
<CustomField>
    <fullName>FIN_SubledgerCodeName__c</fullName>
    <formula>FIN_Subledger_Code__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subledger Code Name</label>
    <type>Text</type>
</CustomField>