force-app/main/default/objects/FIN_Financial_Code__c/recordTypes/FIN_SWE_Financial_Code.recordType-meta.xml
<RecordType>
    <fullName>FIN_SWE_Financial_Code</fullName>
    <active>true</active>
    <label>SWE Financial Code</label>
</RecordType>