force-app/main/default/objects/FIN_Financial_Code__c/recordTypes/FIN_UK_Financial_Code.recordType-meta.xml
<RecordType>
    <fullName>FIN_UK_Financial_Code</fullName>
    <active>true</active>
    <label>UK Financial Code</label>
</RecordType>