force-app/main/default/objects/FIN_Financial_Code__c/recordTypes/US_Financial_Code.recordType-meta.xml
<RecordType>
    <fullName>US_Financial_Code</fullName>
    <active>true</active>
    <label>US Financial Code</label>
</RecordType>