force-app/main/default/objects/FIN_Financial_Code__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FIN_Business_Unit__c</columns>
    <columns>FIN_Company_Code__c</columns>
    <columns>FIN_Financial_Chart_of_Accounts__c</columns>
    <columns>FIN_Subledger_Code__c</columns>
    <columns>FIN_Stat_Chart_of_Accounts__c</columns>
    <columns>Region__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>